--- a/BookStoreClient/src/app/home/home.component.html
+++ b/BookStoreClient/src/app/home/home.component.html
@@ -49,7 +49,7 @@
   <div class="col-sm-12 col-md-8 col-lg-9 col-12">
 
     <!-- product search -->
-    <div class="input-group mb-2">
+    <div class="input-group mt-1 mb-2">
       <span class="input-group-text" id="basic-addon-1">
         <i class="fa-solid fa-magnifying-glass"></i>
       </span>
