cart after login

--- a/BookStoreClient/src/app/home/home.component.html
+++ b/BookStoreClient/src/app/home/home.component.html
@@ -84,7 +84,7 @@
             <h5 class="card-text">{{ item.price }}₺</h5>
             <a
              class="btn btn-dark w-100"
-             (click)="addToCart(item)"
+             (click)="shopping.addToCart(item)"
              id="cart"
              CartAnimation>
              <i class="fa-solid fa-cart-shopping"></i>
