--- a/BookStoreClient/src/app/home/home.component.html
+++ b/BookStoreClient/src/app/home/home.component.html
@@ -1,3 +1,36 @@
+
+<!-- Main carousel -->
+<div id="carouselExampleSlidesOnly" class="carousel slide mt-3" data-bs-ride="carousel">
+  <div  class="carousel-inner">
+    <div style="background-color: white;" class="carousel-item active text-center">
+        <i style="color: #212529; font-size: 25px;" class="fa-solid fa-truck-fast"></i>
+        <h5 style="color: #212529;">{{"fastdelivery"|translate}}</h5>
+    </div>
+    <div style="background-color: white;" class="carousel-item text-center">
+      <i style="color: #212529; font-size: 25px;" class="fa-solid fa-lock"></i>
+      <h5 style="color: #212529;">{{"securepayment"|translate}}</h5>
+    </div>
+    <div style="background-color: white;" class="carousel-item text-center">
+      <i style="color: #212529; font-size: 25px;" class="fa-solid fa-tag"></i>
+      <h5 style="color: #212529;">{{"bestdeal"|translate}}</h5>
+    </div>
+  </div>
+</div>
+<!-- Main carousel -->
+
+<!-- sidebar carousel -->
+<div id="carouselExampleSlidesOnly" class="carousel slide mt-3" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img style="border-radius: 20px; height: 535px;" src="https://i.hizliresim.com/on4bove.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img style="border-radius: 20px; height: 535px;" src="https://i.hizliresim.com/ncb64ks.png" class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
+<!-- sidebar carousel -->
+
 <div class="row mt-1">
 
   <!-- side bar -->
@@ -42,6 +75,19 @@
 
       </div>
     </div>
+    <!-- side carosel -->
+    <div id="carouselExampleSlidesOnly" class="carousel slide mt-5" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://i.hizliresim.com/hoiaobi.png" style="height: 550px;" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="https://i.hizliresim.com/nsb9ile.png" style="height: 550px;" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+    <!-- side carosel -->
+
   </div>
   <!-- side bar -->
 
@@ -96,42 +142,74 @@
     </div>
     <!-- product cards -->
 
-    <!-- pagination -->
-    <div class="d-flex justify-content-center">
-      <nav aria-label="Page navigation example" style="float: right">
-        <ul class="pagination">
-          <li class="page-item" *ngIf="!response?.isFirstPage">
-            <a
-              class="page-link"
-              aria-label="Previous"
-              (click)="getAll(response.pageNumber - 1)"
-            >
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-
-          <li
-            class="page-item"
-            *ngFor="let item of pageNumbers"
-            [ngClass]="response.pageNumber === item ? 'active' : ''"
-          >
-            <a class="page-link" (click)="getAll(item)">{{ item }}</a>
-          </li>
-
-          <li class="page-item" *ngIf="!response?.isLastPage">
-            <a
-              class="page-link"
-              aria-label="Next"
-              (click)="getAll(response.pageNumber + 1)"
-            >
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <!-- pagination -->
+    
 
   </div>
   <!-- content -->
+
+   <!--Arrivals-->
+  <!--  <div class="arrivals">
+    <h1>New Arrivals</h1>
+    <div class="arrivals_box">
+      
+      <div class="arrivals_card">
+        <div class="arrivals_image">
+          <img src="image/arrival_1.jpg">
+        </div>
+        <div class="arrivals_tag">
+          <p>New Arrivals</p>
+          <div class="arrivals_icon">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+          </div>
+          <a href="#" class="arrivals_btn">Learn More</a>
+          </div>
+      </div>
+
+      
+    </div>
+  </div> -->
+  <!--Arrivals-->
+
+
+  <!-- pagination -->
+  <div class="d-flex justify-content-center">
+    <nav aria-label="Page navigation example" style="float: right">
+      <ul class="pagination">
+        <li class="page-item" *ngIf="!response?.isFirstPage">
+          <a
+            class="page-link"
+            aria-label="Previous"
+            (click)="getAll(response.pageNumber - 1)"
+          >
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+
+        <li
+          class="page-item"
+          *ngFor="let item of pageNumbers"
+          [ngClass]="response.pageNumber === item ? 'active' : ''"
+        >
+          <a class="page-link" (click)="getAll(item)">{{ item }}</a>
+        </li>
+
+        <li class="page-item" *ngIf="!response?.isLastPage">
+          <a
+            class="page-link"
+            aria-label="Next"
+            (click)="getAll(response.pageNumber + 1)"
+          >
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <!-- pagination -->
+
+
 </div>
