--- a/BookStoreClient/src/app/order/order.component.html
+++ b/BookStoreClient/src/app/order/order.component.html
@@ -1,72 +1,78 @@
-<!-- <div class="col-sm-12 col-md-12 col-lg-12 col-xl-9 col-12">
+<div class="col-12">
     <div
-      *ngFor="let item of shopping.shoppingCart; let i = index"
+      *ngFor="let item of orders; let i = index"
       class="mt-2 card mb-4"
     >
-      <div class="row">
-        <div class="col-sm-12 col-md-3">
-          <div class="d-flex justify-content-center" style="padding: 5px 5px">
-            <img
-              style="height: 215px; width: 240px"
-              class="img-fluid"
-              [src]="item.imageUrl"
-            />
-          </div>
+    <div class="card-header p-3">
+      <div class="row d-flex justify-content-around align-items-center">
+        <div style="color: #666; font-weight: bold; font-size: 13px;" class="col-3 d-flex flex-column">
+          {{"orderdate"|translate}}
+          <b style="color: #333; font-weight: 400;">{{item.paymentDate}}</b>
         </div>
-        <div
-          class="col-sm-12 col-md-5 d-flex flex-column align-items-center justify-content-center text-center"
-        >
-          <h4>{{ item.title }}</h4>
-          <p>{{ item.description }}</p>
-
-          <div class="d-flex align-items-center justify-content-center">
-            <div class="form-group">
-              <label>{{ "size" | translate }}</label>
-              <select class="form-control-sm ms-1 me-3">
-                <option value="38">38</option>
-                <option value="39">39</option>
-                <option value="40">40</option>
-                <option value="41">41</option>
-                <option value="42">42</option>
-                <option value="43">43</option>
-                <option value="44">44</option>
-                <option value="45">45</option>
-                <option value="46">46</option>
-                <option value="47">47</option>
-              </select>
-            </div>
-
-            <div class="form-group">
-              <label class="me-1">{{ "quantity" | translate }}</label>
-              <select class="form-control-sm">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-              </select>
-            </div>
-          </div>
+        <div style="color: #666; font-weight: bold; font-size: 13px;" class="col-3 d-flex flex-column">
+          {{"paymentnumber"|translate}}
+          <b style="color: #333; font-weight: 400;">{{item.paymentNumber}}</b>
         </div>
-
-        <div class="col-sm-12 col-md-4 d-flex justify-content-center align-items-center">
-          <div class="d-flex justify-content-center align-items-center">
-            <span class="me-4" style="font-size: 25px; font-weight: 300">{{
-              item.price | currency : "₺"
-            }}</span>
-            <i
-              (click)="shopping.removeByIndex(i)"
-              style="font-size: 20px"
-              class="fa-solid fa-trash"
-            ></i>
-          </div>
+        <div style="color: #666; font-weight: bold; font-size: 13px;" class="col-2 d-flex flex-column">
+          {{"ordernumber"|translate}}
+          <b style="color: #333; font-weight: 400;">{{item.orderNumber}}</b>
+        </div>
+        <div style="color: #666; font-weight: bold; font-size: 13px;" class="col-2 d-flex flex-column ">
+          {{"amount"|translate}}
+          <b style="color: #333; font-weight: 400;">{{item.price}} ₺</b>
+        </div>
+        <div style="color: #666; font-weight: bold; font-size: 13px;" class="col-2 d-flex justify-content-end">
+          <button (click)="order.getByOrderNumber(item.orderNumber)" class="btn btn-dark">{{"orderdetails"|translate}}</button>
         </div>
 
       </div>
     </div>
-  </div> -->
+    <div class="card-body p-4">
+      <div class="row" style="border: 1px solid #e2e2e2; border-radius: 5px;">
+        <div
+          class="col-sm-5 d-flex flex-column align-items-center justify-content-center text-center"
+        >
+          <span *ngIf="item.orderStatus == 0" style="font-size: 14px; color: #ffc000;">
+            <i class="fa-solid fa-hourglass-start" style="color: #ffc000;"></i>
+            {{"pendingapproval"|translate}}
+          </span>
+          <span *ngIf="item.orderStatus == 1" style="font-size: 14px; color: #169ad6;">
+            <i class="fa-solid fa-hourglass-half" style="color: #169ad6;"></i>
+            {{"preparing"|translate}}
+          </span>
+          <span *ngIf="item.orderStatus == 2" style="font-size: 14px; color: #169ad6;">
+            <i class="fa-solid fa-truck" style="color: #169ad6;"></i>
+            {{"intransit"|translate}}
+          </span>
+          <span *ngIf="item.orderStatus == 3" style="font-size: 14px; color: #0bc15c;">
+            <i class="fa-solid fa-check" style="color: #0bc15c;"></i>
+            {{"delivered"|translate}}
+          </span>
+          <span *ngIf="item.orderStatus == 4" style="font-size: 14px; color: red;">
+            {{"rejected"|translate}}
+          </span>
+          <span *ngIf="item.orderStatus == 5" style="font-size: 14px; color: #0bc15c;">
+            <i class="fa-solid fa-check" style="color: #0bc15c;"></i>
+            {{"returned"|translate}}
+          </span>
+
+        </div>
+        <div class="col-sm-5">
+          <div class="d-flex justify-content-center" style="padding: 5px 5px">
+            <img
+              style="height: 125px; width: 150px; border-radius: 100px;"
+              class="img-fluid"
+              [src]="item.shoe.imageUrl"
+            />
+          </div>
+        </div>
+
+        <div *ngIf="(item.orderStatus == 3) && checkRefundAvailable(item.paymentDate)" class="col-sm-2 d-flex justify-content-center align-items-center">
+          <button class="btn btn-outline-dark">{{"refundrequest"|translate}}</button>
+        </div>
+        
+      </div>
+    </div>
+      
+    </div>
+  </div>
