--- a/BookStoreClient/src/app/welcome-page/welcome-page.component.html
+++ b/BookStoreClient/src/app/welcome-page/welcome-page.component.html
@@ -1,47 +1,113 @@
-
 <!-- small carousel -->
-<div id="carouselExampleSlidesOnly" class="carousel slide mt-3" data-bs-ride="carousel">
-    <div  class="carousel-inner">
-      <div style="background-color: white;" class="carousel-item active text-center">
-          <i style="color: #212529; font-size: 25px;" class="fa-solid fa-truck-fast"></i>
-          <h5 style="color: #212529;">{{"fastdelivery"|translate}}</h5>
-      </div>
-      <div style="background-color: white;" class="carousel-item text-center">
-        <i style="color: #212529; font-size: 25px;" class="fa-solid fa-lock"></i>
-        <h5 style="color: #212529;">{{"securepayment"|translate}}</h5>
-      </div>
-      <div style="background-color: white;" class="carousel-item text-center">
-        <i style="color: #212529; font-size: 25px;" class="fa-solid fa-tag"></i>
-        <h5 style="color: #212529;">{{"bestdeal"|translate}}</h5>
-      </div>
+<div
+  id="carouselExampleSlidesOnly"
+  class="carousel slide mt-3"
+  data-bs-ride="carousel"
+>
+  <div class="carousel-inner">
+    <div
+      style="background-color: white"
+      class="carousel-item active text-center"
+    >
+      <i
+        style="color: #212529; font-size: 25px"
+        class="fa-solid fa-truck-fast"
+      ></i>
+      <h5 style="color: #212529">{{ "fastdelivery" | translate }}</h5>
+    </div>
+    <div style="background-color: white" class="carousel-item text-center">
+      <i style="color: #212529; font-size: 25px" class="fa-solid fa-lock"></i>
+      <h5 style="color: #212529">{{ "securepayment" | translate }}</h5>
+    </div>
+    <div style="background-color: white" class="carousel-item text-center">
+      <i style="color: #212529; font-size: 25px" class="fa-solid fa-tag"></i>
+      <h5 style="color: #212529">{{ "bestdeal" | translate }}</h5>
     </div>
   </div>
+</div>
 <!-- small carousel -->
-  
+
 <!-- main carousel -->
-<div id="carouselExampleSlidesOnly" class="carousel slide mt-3" data-bs-ride="carousel">
+<div
+  id="carouselExampleSlidesOnly"
+  class="carousel slide mt-3"
+  data-bs-ride="carousel"
+>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img style="border-radius: 20px; height: 535px;" src="https://i.hizliresim.com/on4bove.png" class="d-block w-100" alt="...">
+      <img
+        style="border-radius: 20px; height: 535px"
+        src="https://i.hizliresim.com/on4bove.png"
+        class="d-block w-100"
+        alt="..."
+      />
     </div>
     <div class="carousel-item">
-      <img style="border-radius: 20px; height: 535px;" src="https://i.hizliresim.com/ncb64ks.png" class="d-block w-100" alt="...">
+      <img
+        style="border-radius: 20px; height: 535px"
+        src="https://i.hizliresim.com/ncb64ks.png"
+        class="d-block w-100"
+        alt="..."
+      />
     </div>
   </div>
 </div>
 <!-- main carousel -->
 
-
-<div class="d-flex text-center flex-column justify-content-center align-items-center mt-4">
-  <h1 
-  style="
-  color: #212529; 
-  font-weight: bold; 
-  font-size: 30px; 
-  text-transform: uppercase;
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   ">justkicks store</h1>
-   <p>Ürünleri keşfetmeye başla.</p>
-<button routerLink="shop" class="btn btn-dark btn-md" style="border-radius: 20px;">Keşfet</button>
+<div
+  class="d-flex text-center flex-column justify-content-center align-items-center mt-4"
+>
+  <h1
+    style="
+      color: #212529;
+      font-weight: bold;
+      font-size: 30px;
+      text-transform: uppercase;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+        sans-serif;
+    "
+  >
+    justkicks store
+  </h1>
+  <p>Ürünleri keşfetmeye başla.</p>
+  <button
+    routerLink="shop"
+    class="btn btn-dark btn-md"
+    style="border-radius: 20px; background-color: #212529;"
+  >
+    Keşfet
+  </button>
 </div>
 
+
+<div>
+  <h1 style="color: #212529;">En Yeniler</h1>
+  <ngx-slick-carousel
+  class="carousel mt-3"
+  #slickModal="slick-carousel"
+  [config]="slideConfig"
+>
+  @for (item of newShoes; track item) {
+  <div ngxSlickItem class="slide">
+    <div class="card mb-2" style="width: 300px;">
+      <div class="card-header">
+        <img [src]="item.imageUrl" class="card-img-top" alt="..." />
+      </div>
+      <div class="card-footer text-center">
+        <h5 class="card-text">{{ item.price }}₺</h5>
+        <a
+         class="btn btn-dark w-100"
+         (click)="shopping.addToCart(item)"
+         id="cart"
+         CartAnimation>
+         <i class="fa-solid fa-cart-shopping"></i>
+          {{ "addchart" | translate }}
+        </a>
+      </div>
+    </div>
+  </div>
+  }
+
+</ngx-slick-carousel>
+</div>
