product crud end

--- a/BookStoreClient/src/app/admin/product-management/product-management.component.css
+++ b/BookStoreClient/src/app/admin/product-management/product-management.component.css
@@ -1,3 +1,13 @@
 a{
     cursor: pointer;
 }
+.fa-pen-to-square{
+    color: white;
+}
+.fa-pen-to-square:hover{
+    color:gold;
+}
+
+.fa-trash:hover{
+    color: red;
+}
