--- a/BookStoreClient/src/app/admin/product-edit/product-edit.component.html
+++ b/BookStoreClient/src/app/admin/product-edit/product-edit.component.html
@@ -1,21 +1,32 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a routerLink="/product-management" class="navbar-brand">Admin</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/product-management">Ürünler</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" >Siparişler</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a routerLink="/product-management" class="navbar-brand">Admin</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/product-management">Ürünler</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Siparişler
+          </a>
+          <ul class="dropdown-menu">
+            <li><a routerLink="/order-management" class="dropdown-item">Tüm Siparişler</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a routerLink="/order-management/0" class="dropdown-item">Onay Bekleyenler</a></li>
+            <li><a routerLink="/order-management/1" class="dropdown-item">Hazırlananlar</a></li>
+            <li><a routerLink="/order-management/2" class="dropdown-item">Kargodakiler</a></li>
+            <li><a routerLink="/order-management/3" class="dropdown-item">Teslim Edilenler</a></li>
+            <li><a routerLink="/order-management/5" class="dropdown-item">İade Edilenler</a></li>
+          </ul>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
   
   <h3 class="mt-3">Ürün Güncelle</h3>
 
