--- a/BookStoreClient/src/app/admin/product-management/product-management.component.html
+++ b/BookStoreClient/src/app/admin/product-management/product-management.component.html
@@ -25,6 +25,9 @@
         </li>
       </ul>
     </div>
+    <a style="color: white; font-size: 20px;" class="nav-link active" aria-current="page" routerLink="/">Siteye Git</a>
+
+    <a (click)="adminAuth.logOut()" style="color: white; font-size: 20px;" class="nav-link active ms-5" aria-current="page">Çıkış Yap</a>
   </div>
 </nav>
 
